force-app/main/default/objects/ExportControls__c/ExportControls__c.object-meta.xml
<CustomObject>
    <label>海外在庫/直販管理</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>海外在庫/直販管理No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>