force-app/main/default/objects/ExportControls__c/fields/Billing_system__c.field-meta.xml
<CustomField>
    <fullName>Billing_system__c</fullName>
    <defaultValue>false</defaultValue>
    <description>与儀</description>
    <label>請求管理システム</label>
    <type>Checkbox</type>
</CustomField>