force-app/main/default/objects/ExportControls__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>与儀</description>
    <label>仕入担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Buyer</relationshipName>
    <type>Lookup</type>
</CustomField>