force-app/main/default/objects/ExportControls__c/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <description>与儀</description>
    <inlineHelpText>キャンセルの場合はキャンセル日を入力してください。</inlineHelpText>
    <label>キャンセル日</label>
    <type>Date</type>
</CustomField>