force-app/main/default/objects/ExportControls__c/fields/ChangeClassification__c.field-meta.xml
<CustomField>
    <fullName>ChangeClassification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>与儀</description>
    <label>ソコトレ抹消区分変更</label>
    <type>Checkbox</type>
</CustomField>