force-app/main/default/objects/ExportControls__c/fields/client_base_id__c.field-meta.xml
<CustomField>
    <fullName>client_base_id__c</fullName>
    <label>会員ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>