force-app/main/default/objects/ExportControls__c/fields/client_base_name__c.field-meta.xml
<CustomField>
    <fullName>client_base_name__c</fullName>
    <label>会員名</label>
    <length>80</length>
    <type>Text</type>
</CustomField>