force-app/main/default/objects/ExportControls__c/fields/CreateLedger__c.field-meta.xml
<CustomField>
    <fullName>CreateLedger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>与儀</description>
    <label>台帳作成</label>
    <type>Checkbox</type>
</CustomField>