force-app/main/default/objects/ExportControls__c/fields/Date_of_sale__c.field-meta.xml
<CustomField>
    <fullName>Date_of_sale__c</fullName>
    <description>与儀</description>
    <label>売却日</label>
    <type>Date</type>
</CustomField>