force-app/main/default/objects/ExportControls__c/fields/Delivery_destination__c.field-meta.xml
<CustomField>
    <fullName>Delivery_destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>与儀</description>
    <label>仕向け地（港）</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipName>Delivery_destinations</relationshipName>
    <type>Lookup</type>
</CustomField>