force-app/main/default/objects/ExportControls__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>与儀</description>
    <label>向け地</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipName>Destinations</relationshipName>
    <type>Lookup</type>
</CustomField>