force-app/main/default/objects/ExportControls__c/fields/HandlingFee__c.field-meta.xml
<CustomField>
    <fullName>HandlingFee__c</fullName>
    <description>与儀</description>
    <label>手配料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>