force-app/main/default/objects/ExportControls__c/fields/individual_forwarding_instruction__c.field-meta.xml
<CustomField>
    <fullName>individual_forwarding_instruction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>与儀</description>
    <label>個別回送指示必要</label>
    <type>Checkbox</type>
</CustomField>