force-app/main/default/objects/ExportControls__c/fields/Keiri_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Keiri_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>与儀</description>
    <label>経理スプシ入力</label>
    <type>Checkbox</type>
</CustomField>