force-app/main/default/objects/ExportControls__c/fields/Loading_method__c.field-meta.xml
<CustomField>
    <fullName>Loading_method__c</fullName>
    <description>与儀</description>
    <label>積込方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RORO</fullName>
            </value>
            <value>
                <fullName>Container 40HC</fullName>
            </value>
            <value>
                <fullName>Container 20FT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>