force-app/main/default/objects/ExportControls__c/fields/LoadingSpecification__c.field-meta.xml
<CustomField>
    <fullName>LoadingSpecification__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.LoadingSpecification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>積載指定</label>
    <type>Checkbox</type>
</CustomField>