force-app/main/default/objects/ExportControls__c/fields/LotNo__c.field-meta.xml
<CustomField>
    <fullName>LotNo__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.LotNo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ロット番号</label>
    <type>Text</type>
</CustomField>