force-app/main/default/objects/ExportControls__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>与儀</description>
    <label>販売会員情報</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipName>Members</relationshipName>
    <type>Lookup</type>
</CustomField>