force-app/main/default/objects/ExportControls__c/fields/ModelYearPickList__c.field-meta.xml
<CustomField>
    <fullName>ModelYearPickList__c</fullName>
    <description>山本</description>
    <formula>TEXT(PurchaseOpportunity__r.ModelYearPickList__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>年式</label>
    <type>Text</type>
</CustomField>