force-app/main/default/objects/ExportControls__c/fields/Mst_Models__c.field-meta.xml
<CustomField>
    <fullName>Mst_Models__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.Mst_Models_formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車種</label>
    <type>Text</type>
</CustomField>