force-app/main/default/objects/ExportControls__c/fields/Mst_Yard__c.field-meta.xml
<CustomField>
    <fullName>Mst_Yard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>与儀</description>
    <label>搬入先</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>Mst_Yard__c.Mst_Yard_Classification__c</field>
            <operation>equals</operation>
            <value>自社ヤード</value>
        </filterItems>
        <filterItems>
            <field>Mst_Yard__c.Mst_Yard_Classification__c</field>
            <operation>equals</operation>
            <value>港</value>
        </filterItems>
        <filterItems>
            <field>Mst_Yard__c.Mst_Yard_Classification__c</field>
            <operation>equals</operation>
            <value>修理業者</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Mst_Yard__c</referenceTo>
    <relationshipName>Mst_Yards</relationshipName>
    <type>Lookup</type>
</CustomField>