force-app/main/default/objects/ExportControls__c/fields/other__c.field-meta.xml
<CustomField>
    <fullName>other__c</fullName>
    <description>与儀</description>
    <label>貿易指示書の備考、その指示</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>