force-app/main/default/objects/ExportControls__c/fields/RegistrationNo__c.field-meta.xml
<CustomField>
    <fullName>RegistrationNo__c</fullName>
    <description>山本</description>
    <formula>PurchaseOpportunity__r.RegistrationNo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>登録番号</label>
    <type>Text</type>
</CustomField>