force-app/main/default/objects/ExportControls__c/fields/Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Sales_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>与儀</description>
    <label>海外販売担当者名</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Representative</relationshipName>
    <type>Lookup</type>
</CustomField>