force-app/main/default/objects/ExportControls__c/fields/sell__c.field-meta.xml
<CustomField>
    <fullName>sell__c</fullName>
    <defaultValue>false</defaultValue>
    <description>与儀</description>
    <label>売却</label>
    <type>Checkbox</type>
</CustomField>