force-app/main/default/objects/ExportControls__c/fields/SellingPrice__c.field-meta.xml
<CustomField>
    <fullName>SellingPrice__c</fullName>
    <description>与儀</description>
    <label>販売金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>