force-app/main/default/objects/ExportControls__c/fields/Trade_system__c.field-meta.xml
<CustomField>
    <fullName>Trade_system__c</fullName>
    <defaultValue>false</defaultValue>
    <description>与儀</description>
    <label>貿易システム</label>
    <type>Checkbox</type>
</CustomField>