force-app/main/default/objects/ExportControls__c/fields/Vehicle_purchase_cost__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_purchase_cost__c</fullName>
    <description>与儀
税別/リ別両方チェックないとき→提示金額-リサイクル料金/1.1
両方チェックあるとき→提示金額まま
税別✓あり→提示金額-リサイクル料金
リ別✓あり→提示金額/1.1</description>
    <formula>IF(
    AND(NOT(TaxExcluded__c), NOT(ByRecyclingFee__c)),
        (ProposedPrice__c - RecyclingFee__c) / 1.1,

    IF(
        AND(TaxExcluded__c, ByRecyclingFee__c),
            ProposedPrice__c,

        IF(
            AND(TaxExcluded__c, NOT(ByRecyclingFee__c)),
                ProposedPrice__c - RecyclingFee__c,
                ProposedPrice__c / 1.1
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>仕入車両代</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>