force-app/main/default/objects/ExportControls__c/fields/VehicleCondition__c.field-meta.xml
<CustomField>
    <fullName>VehicleCondition__c</fullName>
    <description>山本</description>
    <formula>TEXT(PurchaseOpportunity__r.VehicleCondition__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>自走可否</label>
    <type>Text</type>
</CustomField>