force-app/main/default/objects/ExportControls__c/fields/WholesalePrice__c.field-meta.xml
<CustomField>
    <fullName>WholesalePrice__c</fullName>
    <description>与儀</description>
    <label>仕切り金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>