force-app/main/default/objects/ExportControls__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Representative__c</columns>
    <columns>client_base_id__c</columns>
    <columns>client_base_name__c</columns>
    <columns>Destination__c</columns>
    <columns>LotNo__c</columns>
    <columns>Mst_Models__c</columns>
    <columns>Date_of_sale__c</columns>
    <columns>individual_forwarding_instruction__c</columns>
    <columns>other__c</columns>
    <columns>ChangeClassification__c</columns>
    <columns>Trade_system__c</columns>
    <columns>sell__c</columns>
    <columns>Billing_system__c</columns>
    <columns>Keiri_Sheet__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>