force-app/main/default/objects/ExportControls__c/listViews/ExportControls.listView-meta.xml
<ListView>
    <fullName>ExportControls</fullName>
    <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5) AND 6</booleanFilter>
    <columns>NAME</columns>
    <columns>Sales_Representative__c</columns>
    <columns>client_base_id__c</columns>
    <columns>client_base_name__c</columns>
    <columns>Destination__c</columns>
    <columns>LotNo__c</columns>
    <columns>Mst_Models__c</columns>
    <columns>Date_of_sale__c</columns>
    <columns>individual_forwarding_instruction__c</columns>
    <columns>other__c</columns>
    <columns>ChangeClassification__c</columns>
    <columns>Trade_system__c</columns>
    <columns>sell__c</columns>
    <columns>Billing_system__c</columns>
    <columns>Keiri_Sheet__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ChangeClassification__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Trade_system__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>sell__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Billing_system__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Keiri_Sheet__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Cancellation_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>未完了の海外在庫/直販管理</label>
</ListView>